# naics_app

./: .gitignore  README.md  pyproject.toml  snowflake.yml
