[project]
requires-python = ">=3.10"

[tool.ruff]
#select = ["I"]  # Enable import sorting rules
line-length = 120

[tool]

[tool.ruff.lint]
# Add the `line-too-long` rule to the enforced rule set. By default, Ruff omits rules that
# overlap with the use of a formatter, like Black, but we can override this behavior by
# explicitly adding the rule.
extend-select = ["E501"]
